Use platform thread for server instead of virtual. Seems to be faster